# ai-maestro-integrator-agent

./: .gitignore  .markdownlint.json  .mega-linter.yml  CHANGELOG.md  README.md  ai-maestro-integrator-agent.agent.toml  cliff.toml  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  notify-marketplace.yml  release.yml  validate.yml
.serena/: project.yml
agents/: ai-maestro-integrator-agent-main-agent.md  amia-api-coordinator.md  amia-bug-investigator.md  amia-code-reviewer.md  amia-committer.md  amia-debug-specialist.md  amia-github-sync.md  amia-integration-verifier.md  amia-integrator-main-agent.md  amia-pr-evaluator.md  amia-screenshot-analyzer.md  amia-test-engineer.md  deployer.md  releaser.md
design/archived/: README.md
design/proposals/: README.md
design/refused/: README.md
design/requirements/: PRRD.md
design/tasks/: TRDD-20260620_043650+0200-8ddc5f37-maestro-persona-scen.md  TRDD-20260622_023722+0200-2581d9ca-pin-cpv-v2136.md  TRDD-dbf53e20-63e3-45d2-9223-c649d2b4cce8-claude-code-2.1.143-audit.md
docs/: AGENT_OPERATIONS.md  FULL_PROJECT_WORKFLOW.md  ROLE_BOUNDARIES.md  TEAM_REGISTRY_SPECIFICATION.md
git-hooks/: pre-push
hooks/: hooks.json
rules/: memory-protocol.md
scripts/: amia_design_create.py  amia_design_search.py  amia_design_validate.py  amia_download.py  amia_github_lifecycle.py  amia_github_lifecycle_core.py  amia_github_lifecycle_issues.py  amia_github_lifecycle_projects.py  amia_github_pr_gate.py  amia_github_pr_gate_checks.py  amia_github_report.py  amia_github_report_formatters.py  amia_pre_issue_close_hook.py  amia_pre_push_hook.py  amia_stop_hook.py  amia_sync_github_issues.py  amia_unicode_compliance.py  check_version_consistency.py  claude-plugin-install.py  cpv_validation_common.py  gitignore_filter.py  lint_files.py  publish.py  setup_git_hooks.py  setup_marketplace_automation.py  setup_plugin_pipeline.py  smart_exec.py  update_marketplace_metadata.py  validate_agent.py  validate_command.py  validate_encoding.py  validate_enterprise.py  validate_hook.py  validate_lsp.py  validate_marketplace_pipeline.py  validate_mcp.py  validate_plugin.py  validate_rules.py  validate_security.py  validate_skill.py  (+2 more)
shared/: cross_platform.py  release_governance.py  thresholds.py
skills/amia-ai-pr-review-methodology/: SKILL.md
skills/amia-ci-failure-patterns/: README.md  (+1 more)
tests/: README.md  run-all-tests.py  test_governance_compliance.py  test_hooks.py  test_memory_skills.py  test_release_governance.py
(+603 files in other folders)
