[project]
name = "ai-maestro-integrator-agent"
version = "1.3.5"
description = "AI Maestro Integrator Agent - Code review, CI/CD integration, GitHub operations, and quality assurance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    # PyYAML is imported at the top of every validate_*.py and a few skill
    # scripts. It used to be supplied via 'uv run --with pyyaml ...' invocation,
    # but that didn't reflect in the manifest — making pyright/IDE tooling
    # complain about an unresolved import. Declaring it here is the source of
    # truth and keeps the runtime contract honest.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# CI (ci.yml Test + release.yml) runs `uv sync --extra dev` then `uv run
# pytest/ruff/mypy`. Without this group `uv sync --extra dev` errors with
# "Extra `dev` is not defined" and breaks the Test + Release jobs on every push.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Emasoft/ai-maestro-integrator-agent"
Repository = "https://github.com/Emasoft/ai-maestro-integrator-agent"
